--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "firebase-admin": "^11.5.0",
     "express": "^4.21.2"
   }
 }
